--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 parser_error = False
 
 [tweepy]
-consumer_key = YRoCykGzWaoZJ5ehnPxQ0Hubc
-consumer_secret = XwTweV1RdrMyEqDFfuKX5eS8COSEOahNbK87wJJX4YFoLNF8Vg
-access_token = 225641768-97zmIlo1bOeVSE3nSWvWA4bLuMswbu20mD1wcPkk
-access_secret = YmBBHQ6vSmf4GeiX7GKx2Tx2a9E7hv7xAxTtWV6mODOuN
+consumer_key = 
+consumer_secret = 
+access_token = 
+access_secret = 
