--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,15 @@
 [settings]
 parser_error = False
-arcpy_module_installed = True
-arcpy_run = False
+arcpy_module_installed = False
+arcpy_run = True
+
+[database]
+main = data_mmda_traffic_alerts.csv
+gis = C:\GIS\Data Files\Work Files\MMDA Tweet2Map\input\data_mmda_traffic_alerts.csv
 
 [tweepy]
-consumer_key = 
-consumer_secret = 
-access_token = 
-access_secret = 
+consumer_key = YRoCykGzWaoZJ5ehnPxQ0Hubc
+consumer_secret = XwTweV1RdrMyEqDFfuKX5eS8COSEOahNbK87wJJX4YFoLNF8Vg
+access_token = 225641768-97zmIlo1bOeVSE3nSWvWA4bLuMswbu20mD1wcPkk
+access_secret = YmBBHQ6vSmf4GeiX7GKx2Tx2a9E7hv7xAxTtWV6mODOuN
 
