--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,11 @@
 [settings]
 parser_error = False
-arcpy_module_installed = True
-arcpy_run = False
+arcpy_module_installed = False
+arcpy_run = True
+
+[database]
+main = data_mmda_traffic_alerts.csv
+gis = C:\GIS\Data Files\Work Files\MMDA Tweet2Map\input\data_mmda_traffic_alerts.csv
 
 [tweepy]
 consumer_key = 
