Rewrote main code

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,11 @@
-[settings]
-parser_error = False
-
-[database]
-main = data_mmda_traffic_alerts_raw.csv
-main_no_null = data_mmda_traffic_spatial.csv
-gis = C:\GIS\Data Files\Work Files\MMDA Tweet2Map\input\data_mmda_traffic_alerts.csv
-
 [tweepy]
 consumer_key = 
 consumer_secret = 
 access_token = 
 access_secret = 
+
+[software]
+locations_path = data\locations.sql
+database_path = data\data.sql
+shp_path = shapefiles\boundary_ncr.shp
 
