--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ before_install:
   - pip install -U pip
   - pip install -U pytest
 install:
-  - pip install tweepy
-  - pip install geopandas
-  - pip install pandas
+  # - pip install tweepy
+  # - pip install geopandas
+  # - pip install rtree
+  # - pip install pandas
   - pip install -e .
   - pip install pytest-cov codecov
 script:
